syntax = "proto3";

option java_package = "ru.blays.hub.core.preferences.proto";
option java_multiple_files = true;



message Settings {
  reserved 4, 9;

  ThemeSettings themeSettings = 1;
  FilesSortSetting filesSortSetting = 6;
  DownloadModeSetting downloadModeSetting = 10;

  PMType pmType = 2;
  uint64 cacheLifetime = 3;
  bool rootMode = 5;

  bool checkUpdates = 7;
  UpdateChannel updateChannel = 8;

  bool checkAppsUpdates = 11;
  int32 checkAppsUpdatesInterval = 12;
}

message ThemeSettings {
  ThemeType theme_type = 1;
  bool monetColors = 2;
  bool amoledTheme = 3;
  int32 accentColorIndex = 4;
  GlassEffectSetting glassEffect = 5;
}

enum ThemeType {
  SYSTEM = 0;
  DARK = 1;
  LIGHT = 2;
}

message GlassEffectSetting {
  bool glassEffectEnabled = 1;
  int32 blurAlpha = 2;
  int32 blurRadius = 3;
  int32 blurNoiseFactor = 4;
}

enum PMType {
  NON_ROOT = 0;
  ROOT = 1;
  SHIZUKU = 2;
}

message FilesSortSetting {
  bool reverse = 1;
  FilesSortMethod method = 2;
}

enum FilesSortMethod {
  NAME = 0;
  SIZE = 1;
  DATE = 2;
}

enum UpdateChannel {
  STABLE = 0;
  BETA = 1;
  NIGHTLY = 2;
}

message DownloadModeSetting {
  DownloadMode mode = 1;
  int32 triesNumber = 2;
}

enum DownloadMode {
  SINGLE_TRY = 0;
  MULTIPLE_TRIES = 1;
  INFINITY_TRIES = 2;
}